# brass-tacks

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  compose.yaml  install.sh  metadata.json  server.ts  start.sh
assets/: icon.icns
backend/: .env.example  Containerfile  entrypoint.sh  pyproject.toml  requirements.txt  test_extract.py  test_extract2.py
backend/alembic/: env.py
backend/alembic/versions/: 7a0f62e847cc_remove_cloud_task_id_and_add_fidelity_score.py  e325891ac2ef_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  utils.py
backend/app/models/: models.py
backend/app/routers/: auth.py  generation.py  generation_events_fixed.py  jobs.py  profiles.py
backend/app/schemas/: generation.py  job.py  profile.py  user.py
backend/app/services/: drafter.py  indexer.py  math_validator.py  parser.py  qdrant_client.py  search.py
backend/tailorforge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_generation.py  test_jobs.py  test_profiles.py  test_security.py
docs/: API_AUTH.md  DEPLOYMENT.md  PROJECT_VISION.md  SECURITY.md  USER_SETUP.md  integration_testing_report.md
docs/code_review/: findings_1_1_recon.md  findings_1_2_security.md  findings_1_3_integrations.md  findings_1_4_logic.md  findings_template.md  master_plan.md  stage_2_synthesis_and_remediation_plan.md
frontend/: Containerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
launcher/linux/: brasstacks.desktop.template  install.sh
launcher/windows/: BrassTacks.bat  install.ps1
parser_service/: Containerfile
parser_service/app/: main.py
src/: App.tsx  index.css
(+18 files in other folders)
