[project]
name = "tailorforge-backend"
version = "0.1.0"
description = "Brass Tacks Local-first Resume Engine"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "litellm>=1.84.0",
    "qdrant-client>=1.8.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "email-validator>=2.1.0",
    "sse-starlette>=2.0.0",
    "tenacity>=9.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
